--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-accelerate
-torchvision
-transformers>=4.25.1
+pillow
+regex
 ftfy
+transformers>=4.25.1
 tensorboard
 Jinja2
+torchvision
+accelerate
